--- a/docs/de-de/modules/auftraege/pages/abonnement.adoc
+++ b/docs/de-de/modules/auftraege/pages/abonnement.adoc
@@ -4,25 +4,23 @@
 :id: EFRPGV6
 :author: team-order-core
 
-Das Modul Abonnement ermöglicht es dir, für Kund:innen intervallgesteuert automatisierte Aufträge anzulegen. So bekommen deine Kund:innen in regelmäßigen zeitlichen Abständen die ausgewählten Artikel zugeschickt, ohne dass du jeden Auftrag einzeln anlegen musst.
-Erstelle ein individuelles Abonnement für eine Kund:in und konfiguriere es wie gewünscht. +
-Das Erstellen und Bearbeiten der Abonnements findet gut überschaubar in einem eigenen Menü deines plentymarkets Systems statt.
-Durch Abonnements generierte Aufträge bearbeitest du dann wie andere Aufträge auch in der Auftragsübersicht. Im Folgenden erfährst du, wie du xref:auftraege:abonnement.adoc#200[Abonnements anlegst], die xref:auftraege:abonnement.adoc#300[Einstellungen vornimmst] und welche Bearbeitungsmöglichkeiten dir zur Verfügung stehen.
+Das Menü *Aufträge » Abonnement* ermöglicht es dir, für Kund:innen intervallgesteuert automatisierte Aufträge anzulegen. So bekommen deine Kund:innen in regelmäßigen zeitlichen Abständen die ausgewählten Artikel zugeschickt, ohne dass du jeden Auftrag einzeln anlegen musst. Erstelle ein individuelles Abonnement für eine Kund:in und konfiguriere es wie gewünscht. +
+Das Erstellen und Bearbeiten der Abonnements findet gut überschaubar in einem eigenen Menü deines plentymarkets Systems statt. Durch Abonnements generierte Aufträge bearbeitest du dann wie andere Aufträge auch in der Auftragsübersicht. Im Folgenden erfährst du, wie du xref:auftraege:abonnement.adoc#200[Abonnements anlegst], die xref:auftraege:abonnement.adoc#300[Einstellungen vornimmst] und welche Bearbeitungsmöglichkeiten dir zur Verfügung stehen.
 
 [#100]
 == Vorbereitende Einstellungen
 
 Damit du so bequem wie möglich mit dem Abonnement arbeiten kannst, solltest du vorher einige vorbereitende Einstellungen beachten und vornehmen. Zum einen hast du die Möglichkeit, xref:auftraege:abonnement.adoc#110[Standardeinstellungen] für deine Abonnements zu wählen, sodass diese beim Anlegen neuer Abonnements vorausgewählt sind und nicht jedes Mal neu von dir eingestellt werden müssen. Auf diese Weise kannst du im voraus Einstellungen festlegen und beim Anlegen neuer Abonnements Zeit sparen. Zum anderen solltest du xref:auftraege:abonnement.adoc#120[Benutzerrechte] vergeben, wenn auch Benutzer:innen vom Typ *Backend* mit Abonnements arbeiten sollen. In den folgenden zwei Kapiteln werden sowohl die Standardeinstellungen als auch die Einstellungen für die Vergabe der notwendigen Benutzerrechte beschrieben.
 
-Außerdem sind Tabellen individuell anpassbar. Das bedeutet, dass du selbst entscheiden kannst, welche Informationen dir in den Tabellenspalten angezeigt werden. Gehe dafür folgendermaßen vor:
+Außerdem kannst du die Tabellen individuell anpassen. Das bedeutet, dass du selbst entscheiden kannst, welche Informationen in den Tabellenspalten angezeigt werden. Gehe dafür wie im Folgenden beschrieben vor:
 
 [.instruction]
 Tabelle individualisieren:
 
 . Klicke auf *Spalten konfigurieren* (material:settings[]). +
 → Das Fenster *Spalten konfigurieren* öffnet sich.
-. Wähle aus, welche Spalten angezeigt werden sollen.
-. Verschiebe (material:drag_indicator[]) die Spalten, so dass sie in der Reihenfolge angezeigt werden, in der du sie brauchst.
+. Wähle, welche Spalten angezeigt werden sollen.
+. Verschiebe (material:drag_indicator[]) die Spalten, sodass sie in der Reihenfolge angezeigt werden, in der du sie benötigst.
 . Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
 
 Wenn du eine Tabelle angepasst hast, wird diese Auswahl gespeichert. Du kannst die Tabellen jederzeit anpassen.
@@ -50,10 +48,10 @@ Gehe folgendermaßen vor, um die Standardeinstellungen vorzunehmen:
 |[#intable-subscription-automatic-orders]*Für fällige Abonnements automatisch Aufträge erzeugen.*
 |Stelle ein, ob für jedes Abonnement automatisch Aufträge mit zugeordneter Auftrags-ID erstellt werden sollen, wenn diese fällig sind.
 Diese Aufträge werden dann automatisch in der Auftragsübersicht eingeordnet und sie können dort bearbeitet werden. +
-*_Beachte_*, dass die Aufträge _nicht_ automatisch erzeugt werden und somit manuell angestoßen werden müssen, wenn du diese Option nicht aktivierst.
+*_Hinweis:_* Die Aufträge werden _nicht_ automatisch erzeugt. Somit müssen die Aufträge manuell angestoßen werden, wenn du diese Option nicht aktivierst.
 
 |[#intable-subscription-default-status]*Standard-Status*
-|Wähle einen Standardstatus, der für Abonnements gelten soll. Dieser Status ist dann für neu angelegte Abonnements vorausgewählt, bleibt aber individuell anpassbar. Zur Verfügung stehen dir alle xref:auftraege:auftraege-verwalten.adoc#1220[Status], die du in deinem plentymarkets System festgelegt hast.
+|Wähle einen Standardstatus, der für Abonnements gelten soll. Dieser Status ist dann für neu angelegte Abonnements vorausgewählt, kann aber individuell angepasst werden. Dir stehen alle xref:auftraege:auftraege-verwalten.adoc#1220[Status], die du in deinem plentymarkets System festgelegt hast, zur Verfügung.
 
 |[#intable-subscription-default-interval]*Standard-Intervall*
 |Wähle optional einen Zeitabstand, in dem die Artikel eines Abonnements verschickt werden sollen, als Standard. Dieses Intervall ist dann für neu angelegte Abonnements vorausgewählt, kann aber individuell angepasst werden.
@@ -81,17 +79,16 @@ Im gleichen Menübereich unter *Einrichtung » Aufträge » Auftragstypen » Abo
 Klicke auf die Schaltfläche *Durchlaufvorschau* und eine Auflistung *Fälliger Abonnements* wird generiert. Diese sind aufsteigend nach der Auftrags-ID sortiert.
 Zudem siehst du auf einen Blick die Laufzeit der Abonnements sowie den letzten und nächsten Durchlauf.
 
-Die Fälligkeit der Abonnements wird systemseitig _einmal täglich_ abgefragt und angestoßen. Die *Durchlaufvorschau* bietet dir nicht nur die Möglichkeit zur Übersicht und Überprüfung anstehender Abonnements, du kannst fällige Abonnements
-hier auch selbst sofort anstoßen. Beachte dabei, dass hier _alle auf einmal und sofort_ angestoßen werden, eine Auswahl einzelner ist in dieser Ansicht nicht möglich.
+Die Fälligkeit der Abonnements wird systemseitig _einmal täglich_ abgefragt und angestoßen. Die *Durchlaufvorschau* bietet dir nicht nur die Möglichkeit zur Übersicht und Überprüfung anstehender Abonnements, du kannst fällige Abonnements hier auch selbst sofort anstoßen. Beachte dabei, dass hier _alle auf einmal und sofort_ angestoßen werden, eine Auswahl einzelner ist in dieser Ansicht nicht möglich.
 Wie du manuelle Durchläufe für einzelne Abonnements in der Detailansicht jedes Abonnements durchführst, wird weiter unten im Kapitel xref:auftraege:abonnement.adoc#800[Abgeschlossene Aufträge: Durchläufe] ausführlicher erläutert.
 
-Werden dir also fällige Abonnements angezeigt, dann klicke für den sofortigen Anstoß rechts unten in der Tabelle auf *Durchlaufvorschau* und warte kurz.
-Die Meldung *Durchlauf durchgeführt* nach Beendigung angezeigt. Die auf diese Weise generierten Aufträge findest du nun sowohl in der *Auftragsübersicht*, als auch im Bereich xref:auftraege:abonnement.adoc#800[Abgeschlossene Aufträge] in der Detailansicht des dazugehörigen Abonnements.
+Wenn dir also fällige Abonnements angezeigt werden, dann klicke für das sofortige Anstoßen rechts unten in der Tabelle auf *Durchlaufvorschau* und warte kurz.
+Die Meldung *Durchlauf durchgeführt* wird nach Beendigung angezeigt. Die auf diese Weise generierten Aufträge findest du nun sowohl in der *Auftragsübersicht* als auch im Bereich xref:auftraege:abonnement.adoc#800[Abgeschlossene Aufträge] in der Detailansicht des dazugehörigen Abonnements.
 
 [IMPORTANT]
 .Verwendung der Durchlaufvorschau
 ====
-Der sofortige Anstoß aller fälligen Abonnements lässt sich nicht rückgängig machen. Du kannst aber in der Auftragsübersicht die generierten Aufträge stornieren.
+Das sofortige Anstoßen aller fälligen Abonnements lässt sich nicht rückgängig machen. Du kannst aber in der Auftragsübersicht die generierten Aufträge stornieren.
 ====
 
 [#120]
@@ -118,7 +115,7 @@ Sollen Mitarbeiter:innen mit dem Zugang *Backend* Abonnements auch anlegen könn
 [#subscription-myview]
 == MyView nutzen
 
-Die Benutzeroberfläche der Detailansichten von Abonnements stehen dir als MyView zur Verfügung. Das bedeutet, dass Benutzer:innen sich jeweils eine eigene Ansicht mit den zur Verfügung stehenden Elementen erstellen können. Dadurch kann jede:r selbst bestimmen, welche Informationen an welcher Stelle benötigt werden. Durch diese Individualisierung wird das Arbeiten nicht nur komfortabler, sondern auch beschleunigt. In diesem Kapitel wird erklärt, wie man mit MyView umgeht und sich eine eigene Ansicht anlegt. Die Bearbeitung von Abonnements, z.B. das xref:auftraege:abonnement.adoc#400[Erstellen einer Artikelliste] oder das xref:auftraege:abonnement.adoc#600[Ändern der Versandkosten und Versandart], wird in den nachfolgenden Kapiteln erklärt.
+Die Bedienoberfläche der Detailansichten von Abonnements stehen dir als MyView zur Verfügung. Das bedeutet, dass Benutzer:innen sich jeweils eine eigene Ansicht mit den zur Verfügung stehenden Elementen erstellen können. Dadurch kann jede:r selbst bestimmen, welche Informationen an welcher Stelle benötigt werden. Durch diese Individualisierung wird das Arbeiten nicht nur komfortabler, sondern auch beschleunigt. In diesem Kapitel wird erklärt, wie man mit MyView umgeht und sich eine eigene Ansicht anlegt. Das Bearbeiten von Abonnements, z.B. das xref:auftraege:abonnement.adoc#400[Erstellen einer Artikelliste] oder das xref:auftraege:abonnement.adoc#600[Ändern der Versandkosten und Versandart], wird in den nachfolgenden Kapiteln erklärt.
 
 Zur Detailansicht eines Abonnements kommst du von der Übersichtstabelle im Menü *Aufträge » Abonnement [Testphase]* aus. Klicke in die Zeile und die Detailansicht des ausgewählten Abonnements öffnet sich. +
 Wenn du hier noch keine eigene Ansicht erstellt hast, wird dir hier die *Standardansicht* angezeigt. Du kannst diese Ansicht so lassen und damit arbeiten oder dir eine eigene Ansicht erstellen. Eigene Ansichten werden gespeichert und stehen dir dann zusammen mit der Standardansicht als Auswahl unter der Liste der Ansichten (icon:caret-down[role="darkGrey"]) zur Verfügung. Somit kannst du zwischen den Ansichten wechseln, solltest du dies wollen. Die ausgewählte Ansicht wird beim Öffnen eines Abonnements immer angewendet.
@@ -316,8 +313,8 @@ _Dies ist ein Pflichtfeld._
 _Dies ist ein Pflichtfeld._
 
 |[#intable-subscription-shipping-costs]*Versandkosten*
-|Dieses Feld ist nach der Erstellung des Abonnements verfügbar. +
-Wenn erforderlich, kannst du die Versandkosten nach Erstellung des Abonnements anpassen. Bei einer Änderung werden der Netto- und der Bruttowarenwert automatisch neu berechnet und angezeigt.
+|Dieses Feld ist nach dem Erstellen des Abonnements verfügbar. +
+Wenn erforderlich, kannst du die Versandkosten nach dem Erstellen des Abonnements anpassen. Bei einer Änderung werden der Netto- und der Bruttowarenwert automatisch neu berechnet und angezeigt.
 
 |[#intable-subscription-shipping-method]*Versandart*
 |Dieses Feld ist nach dem Erstellen des Abonnements verfügbar. +
@@ -346,11 +343,11 @@ Zur vollständigen Anlage des Abonnements müssen Artikel hinzugefügt werden. E
 [.collapseBox]
 .*Suchfunktionen*
 --
-Du hast mehrere Möglichkeiten, die Suche zu nutzen. Du kannst einen Wert im Suchfeld eingeben und dann den entsprechenden Filter auswählen. Wenn du z.B. eine Zahl eingibst, werden mögliche Filter in der diese Zahl vorkommt vorgeschlagen, wie IDs oder Variantennummer. Gib den Wert vollständig ein und wähle den passenden Filter aus den Vorschlägen. Wiederhole dies, um Filter miteinander zu kombinieren. Klicke auf material:search[], um die Suche auszuführen. +
-Möchtest du aus der verfügbaren Filterliste wählen, klicke auf die Liste und gib einen Wert im gewünschten Filter ein. Hast du alle benötigten Filter gesetzt, klicke auf *Suchen*. +
-Möchtest du einen gesetzten Filter löschen, entferne den Chip. In <<table-filters-item-search-subscription>> werden die verfügbaren Filter erläutert.
+Du hast mehrere Möglichkeiten, die Suche zu nutzen. Du kannst einen Wert im Suchfeld eingeben und dann den entsprechenden Filter wählen. Wenn du z.B. eine Zahl eingibst, werden mögliche Filter, in der diese Zahl vorkommt, vorgeschlagen wie beispielsweise ID oder Variantennummer. Gib den Wert vollständig ein und wähle den passenden Filter aus den Vorschlägen. Wiederhole dies, um Filter miteinander zu kombinieren. Klicke auf material:search[], um die Suche auszuführen. +
+Wenn du aus der verfügbaren Filterliste wählen möchtest, klicke auf die Liste und gib einen Wert im gewünschten Filter ein. Wenn du alle benötigten Filter gesetzt hast, klicke auf *Suchen*. +
+Wenn du einen gesetzten Filter löschen möchtest, entferne den Chip. In <<#table-filters-item-search-subscription>> werden die verfügbaren Filter erläutert.
 
-Zudem kannst du mit der Komponente *Gespeicherte Filter* (material:bookmarks[]) ausgewählte Filter in der UI speichern. Gespeicherte Filtersets sind dann in dieser Komponente bei jedem Öffnen des Menüs auswählbar, ähnlich wie Lesezeichen. Jede:r Benutzer:in kann eigene Filter festlegen.
+Zudem kannst du mit der Komponente *Gespeicherte Filter* (material:bookmarks[]) ausgewählte Filter im Menü speichern. Gespeicherte Filtersets können dann in dieser Komponente bei jedem Öffnen des Menüs gewählt werden, ähnlich wie Lesezeichen. Jede:r Benutzer:in kann eigene Filter festlegen.
 
 [.instruction]
 Filter speichern:
@@ -409,8 +406,8 @@ Artikel zum Warenkorb hinzufügen:
 [TIP]
 .Preisauswahl
 ====
-In einer Dropdown-Liste werden dir alle für dieses Abonnement ermittelten Verkaufspreise angezeigt. Du kannst einen der angezeigten Preise wählen, dieser wird dann als Grundlage für die weiteren Berechnungen genommen. Enthält der Preis einen Rabatt, wird dies hinter dem Preisnamen und dem Betrag angezeigt. Die optionalen Spalten *Kundenklassenrabatt* und *Kategorierabatt* zeigen den Prozentsatz des angewendeten Rabatts an. +
-Konnte kein gültiger Verkaufspreis ermittelt werden, wird *Kein gültiger Verkaufspreis* in der Dropdown-Liste angezeigt. Du kannst den Artikel dennoch in den Warenkorb legen. Im Warenkorb kannst du den Preis manuell anpassen. Das Abonnement lässt sich aber auch ohne gültige Verkaufspreise anlegen, sollte dies gewünscht sein.
+In einer Dropdown-Liste werden alle für dieses Abonnement ermittelten Verkaufspreise angezeigt. Du kannst einen der angezeigten Preise wählen, dieser wird dann als Grundlage für die weiteren Berechnungen genommen. Wenn der Preis einen Rabatt enthält, wird dies hinter dem Preisnamen und dem Betrag angezeigt. Die optionalen Spalten *Kundenklassenrabatt* und *Kategorierabatt* zeigen den Prozentsatz des angewendeten Rabatts an. +
+Wenn kein gültiger Verkaufspreis ermittelt werden konnte, wird *Kein gültiger Verkaufspreis* in der Dropdown-Liste angezeigt. Du kannst den Artikel dennoch in den Warenkorb legen. Im Warenkorb kannst du den Preis manuell anpassen. Das Abonnement lässt sich aber auch ohne gültige Verkaufspreise anlegen, sollte dies gewünscht sein.
 
 Eine manuelle Anpassung des Preises kannst du im Warenkorb vornehmen. Weitere Informationen dazu findest du im Kapitel xref:auftraege:abonnement.adoc#425[Warenkorb: Preisauswahl].
 ====
@@ -419,7 +416,7 @@ Eine manuelle Anpassung des Preises kannst du im Warenkorb vornehmen. Weitere In
 .*Tabelle Auftragspositionen individualisieren*
 --
 
-Die Tabelle zum Hinzufügen von Auftragspositionen lässt sich individuell anpassen. Du kannst wählen, welche Tabellenspalten dir in welcher Reihenfolge in der Tabelle angezeigt werden sollen. Standardmäßig werden dir beim Öffnen des Menüs folgende Tabellenspalten angezeigt:
+Die Tabelle zum Hinzufügen von Auftragspositionen lässt sich individuell anpassen. Du kannst wählen, welche Tabellenspalten in welcher Reihenfolge in der Tabelle angezeigt werden sollen. Standardmäßig werden beim Öffnen des Menüs folgende Tabellenspalten angezeigt:
 
 * Artikelname
 * Varianten-ID / Nr.
@@ -427,7 +424,7 @@ Die Tabelle zum Hinzufügen von Auftragspositionen lässt sich individuell anpas
 * Menge
 * Preisauswahl
 
-Die folgenden Tabellenspalten können ausgewählt werden, werden aber standardmäßig nicht angezeigt:
+Die folgenden Tabellenspalten können gewählt werden, werden aber standardmäßig _nicht_ angezeigt:
 
 * Artikel-ID
 * Varianten-ID
@@ -445,7 +442,7 @@ Tabelle individualisieren:
 . Klicke auf *Spalten konfigurieren* (material:settings[]). +
 → Das Fenster *Spalten konfigurieren* öffnet sich.
 . Wähle aus, welche Spalten angezeigt werden sollen.
-. Verschiebe (material:drag_indicator[]) die Spalten, so dass sie in der Reihenfolge angezeigt werden, in der du sie brauchst.
+. Verschiebe (material:drag_indicator[]) die Spalten, sodass sie in der Reihenfolge angezeigt werden, in der du sie benötigst.
 . Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
 
 --
@@ -480,7 +477,7 @@ Tabelle individualisieren:
 . Klicke auf *Spalten konfigurieren* (material:settings[]). +
 → Das Fenster *Spalten konfigurieren* öffnet sich.
 . Wähle aus, welche Spalten angezeigt werden sollen.
-. Verschiebe (material:drag_indicator[]) die Spalten, so dass sie in der Reihenfolge angezeigt werden, in der du sie brauchst.
+. Verschiebe (material:drag_indicator[]) die Spalten, sodass sie in der Reihenfolge angezeigt werden, in der du sie benötigst.
 . Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
 
 --
@@ -491,7 +488,7 @@ Tabelle individualisieren:
 Beim Hinzufügen eines Artikel wurden dir in der Dropdown-Liste der Spalte *Preisauswahl* alle für dieses Abonnement ermittelten Verkaufspreise angezeigt. Der dort gewählte Preis wird dann als Grundlage für die weiteren Berechnungen genommen.
 
 Im Warenkorb kannst du ebenfalls eine Anpassung des Preises vornehmen. Wähle dafür einen Preis aus der Dropdown-Liste der Spalte *Preisauswahl* aus. Du kannst im Warenkorb auch manuell einen anderen Preis eingeben. Dieser wird in der Auswahl dann als *Manueller Preis* angezeigt. +
-Wählst du einen anderen Verkaufspreis als den ersten ermittelten oder änderst Mengen, muss der Verkaufspreis aktualisiert werden. Klicke dafür auf *Verkaufspreis aktualisieren* (material:refresh[]). Du kannst jeden Artikel einzeln aktualisieren oder mit der Schaltfläche über der Warenkorbtabelle alle Auftragspositionen auf einmal aktualisieren. Nach der Aktualisierung ist die Speichern-Schaltfläche (material:save[]) wieder verfügbar.
+Wenn du einen anderen Verkaufspreis als den ersten ermittelten wählst oder Mengen änderst, muss der Verkaufspreis aktualisiert werden. Klicke dafür auf *Verkaufspreis aktualisieren* (material:refresh[]). Du kannst jeden Artikel einzeln aktualisieren oder mit der Schaltfläche über der Warenkorbtabelle alle Auftragspositionen auf einmal aktualisieren. Nach dem Aktualisieren ist die Speichern-Schaltfläche (material:save[]) wieder verfügbar.
 
 Folgendes gilt für die Verkaufspreise:
 
@@ -503,7 +500,7 @@ Folgendes gilt für die Verkaufspreise:
 === Warenkorb: Eigenschaften an Auftragspositionen
 
 Vom Warenkorb aus kannst du die Eigenschaften der Auftragspositionen eines Abonnements (Bestelleigenschaften) bearbeiten. Die hier vorgenommenen Änderungen gelten nur für die Auftragspositionen dieses Abonnements. Die im System angelegten Eigenschaften werden nicht überschrieben. Es stehen dir hier nur Eigenschaften zur Verfügung, die du bereits im System angelegt hast. +
-Wenn du Eigenschaften erstellen und bearbeiten möchtest oder du noch nicht mit der Struktur von Eigenschaften vertraut bist, informiere dich im Handbuchkapitel xref:artikel:eigenschaften.adoc#500[Eigenschaften].
+Wenn du Eigenschaften erstellen und bearbeiten möchtest oder du noch nicht mit der Struktur von Eigenschaften vertraut bist, informiere dich auf der Handbuchseite xref:artikel:eigenschaften.adoc#500[Eigenschaften].
 
 Damit eine Eigenschaft an einer Auftragsposition gesetzt werden kann, muss sie in den Eigenschaftseinstellungen im Bereich *Optionen* als *Bestelleigenschaft* definiert werden. Lege unter xref:artikel:eigenschaften.adoc#property-options[Optionen] außerdem mögliche Aufpreise und Besteuerungen fest. Die hier hinterlegten Werte werden in die Berechnungen einbezogen.
 
@@ -560,7 +557,7 @@ Tabelle individualisieren:
 . Klicke auf *Spalten konfigurieren* (material:settings[]). +
 → Das Fenster *Spalten konfigurieren* öffnet sich.
 . Wähle aus, welche Spalten angezeigt werden sollen.
-. Verschiebe (material:drag_indicator[]) die Spalten, so dass sie in der Reihenfolge angezeigt werden, in der du sie brauchst.
+. Verschiebe (material:drag_indicator[]) die Spalten, sodass sie in der Reihenfolge angezeigt werden, in der du sie benötigst.
 . Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
 
 --
@@ -582,10 +579,12 @@ Oder gehe über *Bearbeiten* (material:edit[]) in der *Artikelliste* eines Abonn
 |Entferne Artikel aus dem Warenkorb des Abonnements über *Artikel löschen* (material:delete[]).
 
 |[#intable-subscription-change-items]*Mengen anpassen*
-|Ändere die Menge eines Artikels im Warenkorb des Abonnements durch Klicken in die Zeile des Artikels im Warenkorb. Beachte, dass eine Änderung an Mengen eine Aktualisierung der Preise erfordert, bevor der Warenkorb gespeichert werden kann. Klicke dafür auf *Verkaufspreis aktualisieren* (material:refresh[]).
+|Ändere die Menge eines Artikels im Warenkorb des Abonnements durch Klicken in die Zeile des Artikels im Warenkorb. +
+*_Hinweis:_* Eine Änderung an Mengen erfordert eine Aktualisierung der Preise, bevor der Warenkorb gespeichert werden kann. Klicke dafür auf *Verkaufspreis aktualisieren* (material:refresh[]).
 
 |[#intable-subscription-change-prices]*Preise anpassen*
-|Passe den Preis eines Artikels im Warenkorb des Abonnements an. Beachte, dass die Preisänderung nur für das ausgewählte Abonnement gilt. Zudem erfordert eine Änderung an Preisen eine Aktualisierung, bevor der Warenkorb gespeichert werden kann. Klicke dafür auf *Verkaufspreis aktualisieren* (material:refresh[]).
+|Passe den Preis eines Artikels im Warenkorb des Abonnements an. Beachte, dass die Preisänderung nur für das ausgewählte Abonnement gilt. +
+*_Hinweis:_* Eine Änderung an Preisen erfordert eine Aktualisierung, bevor der Warenkorb gespeichert werden kann. Klicke dafür auf *Verkaufspreis aktualisieren* (material:refresh[]).
 
 |====
 
@@ -597,7 +596,7 @@ In der Detailansicht des Abonnements kannst du zudem den *Artikelnamen* ändern.
 [TIP]
 .Änderungen an Artikeln
 ====
-Änderungen an Artikeln in der Ansicht des Abonnements gelten nur für das ausgewählte Abonnement. Für dauerhafte Änderungen an Artikeln müssen die Anpassungen unter *Artikel » Artikel bearbeiten* oder *Einrichtung » Artikel* vorgenommen werden. Die Bearbeitung von Artikeln ist im Handbuch auf der Seite xref:artikel:artikel.adoc#[Artikel] beschrieben.
+Änderungen an Artikeln in der Ansicht des Abonnements gelten nur für das ausgewählte Abonnement. Für dauerhafte Änderungen an Artikeln müssen die Anpassungen unter *Artikel » Artikel bearbeiten* oder *Einrichtung » Artikel* vorgenommen werden. Das Bearbeiten von Artikeln ist im Handbuch auf der Seite xref:artikel:artikel.adoc#[Artikel] beschrieben.
 ====
 
 [#600]
@@ -633,10 +632,10 @@ Zudem geben in der Detailansicht jedes Abonnements Infoboxen grundlegende Inform
 In diesem Bereich werden die bereits abgeschlossene Aufträge des Abonnements angezeigt. Diese können durch automatische oder manuelle Durchläufe entstanden sein. +
 Ein *automatischer Durchlauf* erfolgt in den Zeitabständen, die du im Intervall für das Abonnement ausgewählt hast. Wenn das Ende des Abonnements erreicht ist oder das Abonnement gekündigt wurde, finden keine automatischen Durchläufe mehr statt.
 
-Zusätzlich zu den automatischen Durchläufen hast du die Möglichkeit, einen *manuellen Durchlauf* (material:subscriptions[]) anzustoßen. *_Beachte_*, dass ein manueller Durchlauf immer _sofort_ ausgeführt wird. Gehe für das Anstoßen eines manuellen Durchlaufs wie folgt vor.
+Zusätzlich zu den automatischen Durchläufen hast du die Möglichkeit, einen *manuellen Durchlauf* (material:subscriptions[]) anzustoßen. Beachte, dass ein manueller Durchlauf immer _sofort_ ausgeführt wird. Gehe für das Anstoßen eines manuellen Durchlaufs wie folgt vor.
 
 [.instruction]
-Anstoß eines manuellen Durchlaufs:
+Manuellen Durchlauf anstoßen:
 
 . Gehe in der Detailansicht des ausgewählten Abonnements in den Bereich *Abgeschlossene Aufträge*.
 . Klicke auf *Manuellen Durchlauf starten* (material:subscriptions[]).
@@ -646,19 +645,19 @@ Anstoß eines manuellen Durchlaufs:
 → Der Auftrag erhält eine *Auftrags-ID* und ist sowohl im Bereich *Abgeschlossene Aufträge* als auch in der *Auftragsübersicht* zu sehen.
 
 Im Bereich *Abgeschlossene Aufträge* wird nicht nur die ID angezeigt, du erhältst auch Informationen zum Auftrag, z.B. wann der Auftrag erstellt wurde oder welche Zahlungsart ausgewählt ist.
-Zudem hast du die Möglichkeit, einzelne Aufträge eines Abonnements zu löschen (material:remove_circle[]). Durch das Löschen des Auftrags wird er gleichzeitig auch aus der Auftragsübersicht unter *Aufträge bearbeiten* entfernt. *_Beachte_*, dass Aufträge nicht gelöscht werden können, wenn bereits steuerrelevante Dokumente, wie z.B. eine Rechnung, erzeugt wurden.
+Zudem hast du die Möglichkeit, einzelne Aufträge eines Abonnements zu löschen (material:remove_circle[]). Durch das Löschen des Auftrags wird der Auftrag gleichzeitig auch aus der Auftragsübersicht unter *Aufträge bearbeiten* entfernt. Beachte, dass Aufträge _nicht_ gelöscht werden können, wenn bereits steuerrelevante Dokumente, wie z.B. eine Rechnung, erzeugt wurden.
 
 [WARNING]
 .Überspringen eines automatischen Durchlaufs
 ====
-Wenn du bei Durchführung eines manuellen Durchlaufs *Nächsten automatischen Durchlauf überspringen* gewählt hast, wird der nächste automatische Durchlauf auch dann übersprungen, wenn du den Auftrag aus dem manuellen Durchlauf löschst.
+Wenn du beim Durchführen eines manuellen Durchlaufs die Option *Nächsten automatischen Durchlauf überspringen* gewählt hast, wird der nächste automatische Durchlauf auch dann übersprungen, wenn du den Auftrag aus dem manuellen Durchlauf löschst.
 ====
 
 [.collapseBox]
 .*Tabelle Abgeschlossene Aufträge individualisieren*
 --
 
-Die Tabelle *Abgeschlossene Aufträge* lässt sich individuell anpassen. Du kannst wählen, welche Tabellenspalten dir in welcher Reihenfolge in der Tabelle angezeigt werden sollen. Passe die Tabelle damit deinen Bedürfnissen und deinem Arbeitsablauf an. Wenn du die Tabelle angepasst hast, wird diese Auswahl gespeichert. Du kannst die Tabelle jederzeit anpassen.
+Du kannst die Tabelle *Abgeschlossene Aufträge* individuell anpassen. Du kannst wählen, welche Tabellenspalten in welcher Reihenfolge in der Tabelle angezeigt werden sollen. Passe die Tabelle somit deinen Bedürfnissen und deinem Arbeitsablauf an. Wenn du die Tabelle angepasst hast, wird diese Auswahl gespeichert. Du kannst die Tabelle jederzeit anpassen.
 
 [.instruction]
 Tabelle individualisieren:
@@ -666,18 +665,18 @@ Tabelle individualisieren:
 . Klicke auf *Spalten konfigurieren* (material:settings[]). +
 → Das Fenster *Spalten konfigurieren* öffnet sich.
 . Wähle aus, welche Spalten angezeigt werden sollen.
-. Verschiebe (material:drag_indicator[]) die Spalten, so dass sie in der Reihenfolge angezeigt werden, in der du sie brauchst.
+. Verschiebe (material:drag_indicator[]) die Spalten, sodass sie in der Reihenfolge angezeigt werden, in der du sie benötigst.
 . Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
 
 --
 
 [#850]
 [.discrete]
-==== Sperrung und Entsperrung von Abonnements
+==== Sperren und Entsperren von Abonnements
 
-Nach dem Generieren des ersten Auftrags wird das Abonnement gesperrt und die Bearbeitungsmöglichkeiten in der Detailansicht stehen nur noch sehr eingeschränkt zur Verfügung. End- und Kündigungsdatum des Abonnements können weiterhin bearbeitet werden. Wenn der Auftrag gelöscht wird, wird auch das Abonnement wieder freigeschaltet. Beachte aber, dass Aufträge nicht gelöscht werden können, sobald steuerrelevante Dokumente für diesen Auftrag existieren.
+Nach dem Generieren des ersten Auftrags wird das Abonnement gesperrt und die Bearbeitungsmöglichkeiten in der Detailansicht stehen nur noch sehr eingeschränkt zur Verfügung. End- und Kündigungsdatum des Abonnements können weiterhin bearbeitet werden. Wenn der Auftrag gelöscht wird, wird auch das Abonnement wieder freigeschaltet. Beachte aber, dass Aufträge _nicht_ gelöscht werden können, sobald steuerrelevante Dokumente für diesen Auftrag existieren.
 
-Zudem gibt es die Möglichkeit durch Klick auf *Abonnement entsperren* (material:lock[]) das Abonnement zu entsperren, sodass alle Bearbeitungsmöglichkeiten wieder zur Verfügung stehen. Die xref:auftraege:abonnement.adoc#1000[Auftragshistorie] dokumentiert, welche Benutzer:in diese Aktion wann ausgeführt hat. Durch einen Klick auf *Abonnement sperren* (material:lock_open[]) wird das Abonnement wieder gesperrt. Wenn dieser Schritt nicht ausgeführt wird, wird das Abonnement automatisch nach dem nächsten Durchlauf wieder gesperrt. Es empfiehlt sich aber, das Abonnement nach der Bearbeitung wieder zu sperren, weil auch diese Aktion einen Eintrag in der Auftragshistorie bekommt. So wird die Transparenz und Nachvollziehbarkeit der Bearbeitung eines Abonnements sichergestellt.
+Zudem gibt es die Möglichkeit durch Klick auf *Abonnement entsperren* (material:lock[]) das Abonnement zu entsperren, sodass alle Bearbeitungsmöglichkeiten wieder zur Verfügung stehen. Die xref:auftraege:abonnement.adoc#1000[Auftragshistorie] dokumentiert, welche Benutzer:in diese Aktion wann ausgeführt hat. Durch einen Klick auf *Abonnement sperren* (material:lock_open[]) wird das Abonnement wieder gesperrt. Wenn dieser Schritt nicht ausgeführt wird, wird das Abonnement automatisch nach dem nächsten Durchlauf wieder gesperrt. Es empfiehlt sich aber, das Abonnement nach dem Bearbeiten wieder zu sperren, weil auch diese Aktion einen Eintrag in der Auftragshistorie bekommt. So wird die Transparenz und Nachvollziehbarkeit der Bearbeitung eines Abonnements sichergestellt.
 
 [#900]
 === Messenger nutzen
@@ -738,7 +737,7 @@ Tabelle individualisieren:
 . Klicke auf *Spalten konfigurieren* (material:settings[]). +
 → Das Fenster *Spalten konfigurieren* öffnet sich.
 . Wähle aus, welche Spalten angezeigt werden sollen.
-. Verschiebe (material:drag_indicator[]) die Spalten, so dass sie in der Reihenfolge angezeigt werden, in der du sie brauchst.
+. Verschiebe (material:drag_indicator[]) die Spalten, sodass sie in der Reihenfolge angezeigt werden, in der du sie benötigst.
 . Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
 
 --
@@ -820,7 +819,7 @@ Filter speichern:
 [#1300]
 === Gruppenfunktion: Manueller Durchlauf
 
-In der Übersichtsansicht steht dir auch die Gruppenfunktion *Manuellen Durchlauf starten* (material:subscriptions[]) zur Verfügung. Sobald du mindestens ein Abonnement gewählt hast, wird die Gruppenfunktion über der Tabelle angezeigt. Mit dieser Funktion kannst du für bis zu 20 ausgewählte Abonnements auf einmal einen manuellen Durchlauf anstoßen. Wie auch beim Anstoßen eines einzelnen manuellen Durchlaufs in der Detailansicht eines Abonnements wird der manuelle Durchlauf der Gruppenfunktion _sofort_ ausgeführt.
+In der Übersichtsansicht steht dir auch die Gruppenfunktion *Manuellen Durchlauf starten* (material:subscriptions[]) zur Verfügung. Sobald du mindestens ein Abonnement gewählt hast, wird die Gruppenfunktion über der Tabelle angezeigt. Mit dieser Funktion kannst du für bis zu 20 gewählte Abonnements auf einmal einen manuellen Durchlauf anstoßen. Wie auch beim Anstoßen eines einzelnen manuellen Durchlaufs in der Detailansicht eines Abonnements wird der manuelle Durchlauf der Gruppenfunktion _sofort_ ausgeführt.
 
 [.instruction]
 Gehe wie folgt vor, um die Gruppenfunktion zu nutzen:
@@ -834,9 +833,8 @@ Gehe wie folgt vor, um die Gruppenfunktion zu nutzen:
 [#1400]
 === Abonnements in der Auftragsübersicht
 
-In der Auftragsübersicht im Menü *Aufträge » Aufträge bearbeiten* werden die durch die Abonnements generierten Aufträge aufgelistet.
-In der Titelzeile des Auftrags wird angezeigt, zu welchem Abonnement ein Auftrag gehört. Wenn du auf die ID des Abonnements klickst, wirst du zur Detailansicht des Abonnements geleitet.
-Du kannst das ausgewählte Abonnement in der Detailansicht bearbeiten.
+In der Auftragsübersicht im Menü *Aufträge » Aufträge bearbeiten* werden die durch die Abonnements generierten Aufträge aufgelistet. +
+In der Titelzeile des Auftrags wird angezeigt, zu welchem Abonnement ein Auftrag gehört. Wenn du auf die ID des Abonnements klickst, wirst du zur Detailansicht des Abonnements geleitet. Du kannst das ausgewählte Abonnement in der Detailansicht bearbeiten.
 
 Die Aufträge eines Abonnements verwaltest du hier in der Auftragsübersicht, wie andere Aufträge auch.
 Eine Beschreibung der Bearbeitungsmöglichkeiten findest du im Kapitel xref:auftraege:auftraege-verwalten.adoc#1500[Aufträge bearbeiten].
