--- a/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
@@ -394,14 +394,21 @@ Nur Berichte, die bis zu diesem Datum und zu dieser Uhrzeit aktualisiert wurden,
 ==== Berichte anfordern
 
 Im Menü *Einrichtung » Märkte » Amazon » Berichte » Anfordern* kannst du die Erstellung von Amazon-Berichten anfordern.
+Dies kann zum Beispiel hilfreich sein, falls einmal Daten in deinen Amazon-Berichten fehlen und du deshalb einen neuen Bericht anfordern möchtest.
 
 *_Hinweise zum Anfordern von Berichten:_*
 
 * Der Zeitraum, über den du Berichte anfordern willst, darf maximal eine Woche sein.
 
-* Der Zeitraum, über den du Berichte anfordern willst, sollte so klein wie möglich sein, da die Verarbeitung sehr großer Berichte aufgrund der Datenmenge lang dauern kann.
+* Der Zeitraum, über den du Berichte anfordern willst, sollte so klein wie möglich sein, da die Verarbeitung sehr großer Berichte aufgrund der Datenmenge zu Problemen führen kann.
 
 * Berichte können nicht beliebig oft angefordert werden. Einige Berichtstypen können beispielsweise nur 2- oder 5-mal pro Tag angefordert werden.
+
+[IMPORTANT]
+.Berichte ohne Daten können nicht erstellt werden
+====
+Falls keine Daten für den angeforderten Zeitraum des Berichts vorliegen, erstellt Amazon den Bericht auch nicht. Derzeit kann plentymarkets leider keine Rückmeldung darüber geben, dass ein Bericht nicht generiert werden konnte.
+====
 
 [.instruction]
 Bericht anfordern:
