--- a/docs/en-gb/modules/markets/pages/amazon-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-setup.adoc
@@ -394,14 +394,21 @@ Only reports which were updated up until this date and time will be displayed. R
 ==== Requesting reports
 
 In the *Setup » Markets » Amazon » Reports » Request* menu, you can request the creation of Amazon reports.
+For example, this can be useful if data is missing in your Amazon reports and you want to request a new report.
 
 *_Notes on requesting reports:_*
 
 * You can only request reports of a period of a maximum of one week.
 
-* The timeframe of the requested report should be as short as possible, as processing big reports can take more time due to the amount of data.
+* The timeframe of the requested report should be as short as possible, as processing big reports can cause issues due to the amount of data.
 
 * The number of requests is limited. For example, you can only request certain report types 2 or 5 times per day.
+
+[IMPORTANT]
+.Reports without data cannot be created
+====
+If no data exists for the requested time frame of the report, then Amazon will not create the report. Currently, it is not possible for plentymarkets to inform customers that a report could not be created.
+====
 
 [.instruction]
 Requesting a report:
@@ -435,7 +442,7 @@ Requesting a report:
 
 | *Report type*
 | Select the report type. If you hover over a report type in the drop-down list, a tooltip with information about this report type is shown. +
-*_Note:_* The number of requests is limited. After you selected a report type, you will see how often per day you can request it below the report.
+*_Note:_* The number of requests is limited. After you selected a report type, you will see how often per day you can request it.
 |===
 
 [#2700]
